[gd_scene load_steps=12 format=2]

[ext_resource path="res://data/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Actor/ScientistWalk.png" type="Texture" id=3]
[ext_resource path="res://data/Actors/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/Effects/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://data/UI/CommandWheel.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Actor/ScientistIdle.png" type="Texture" id=7]
[ext_resource path="res://assets/Effects/light.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "walking"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 7.54951 )

[node name="Player" instance=ExtResource( 1 )]
collision_mask = 94
script = ExtResource( 2 )
speed = 350
acceleration = 0.1
friction = 0.1
jumpForce = 500

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 7 )
hframes = 4
region_rect = Rect2( 0, 0, 32, 64 )

[node name="CollisionPolygon2D" parent="." index="1"]
polygon = PoolVector2Array( -16, -32, -16, 32, 16, 32, 16, -32 )

[node name="AnimationPlayer" parent="." index="2"]
anims/idle = SubResource( 1 )
anims/walking = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]
position = Vector2( 104, 0 )
current = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.75
drag_margin_right = 0.1
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera2D" index="0"]

[node name="Gun" parent="." index="4" instance=ExtResource( 4 )]
visible = false
position = Vector2( -1.78583, -3.77008 )

[node name="Timer" parent="." index="5"]
wait_time = 0.1
one_shot = true

[node name="Feet" parent="." index="6"]
position = Vector2( 0, 24 )

[node name="CollisionShape2D" parent="Feet" index="0"]
shape = SubResource( 3 )

[node name="CommandWheel" parent="." index="7" instance=ExtResource( 6 )]

[node name="JumpBuffer" parent="." index="8"]
wait_time = 0.1
one_shot = true

[node name="IdleTimer" type="Timer" parent="." index="9"]
wait_time = 4.0
one_shot = true

[node name="Light2D" type="Light2D" parent="." index="10"]
enabled = false
texture = ExtResource( 8 )
texture_scale = 7.0
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.741176 )
[connection signal="on_left_side" from="Gun" to="." method="_on_Gun_on_left_side"]
[connection signal="on_right_side" from="Gun" to="." method="_on_Gun_on_right_side"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
